kubernetes_prod/mycluster/mybackend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybackend-deployment
  labels:
    app: my-app
    component: backend

spec:
  template:
    metadata:
      name: mybackend-pod
      labels:
        component: backend
        app: my-app
    spec:
      containers:
        - name: mybackend-container
          image: ceoael/mybackendprod
  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: backend
