kubernetes_prod/mycluster/mynginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx-deployment
  labels:
    component: web
    app: my-app

spec:
  template:
    metadata:
      name: my-nginx-pod
      labels:
        component: web
        app: my-app
    spec:
      containers:
        - name: my-nginx-container
          image: ceoael/myfrontendbuild
  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: web
