kubernetes_prod/mycluster/mybackend-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: mybackend-node-port

spec:
  type: NodePort
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 31000

  selector:
    component: backend
    app: my-app
